# langgraph-self-evolving-agent

./: .gitignore  README.md  dashboard.py  demo.py  pyproject.toml  requirements.txt  start_chat.command  submit.py
src/: __init__.py  code_executor.py  domain_classifier.py  domain_executors.py  executor.py  github_exporter.py  graph.py  json_parser.py  llm.py  session_source.py  state.py  tool_synthesis.py  webtools.py
src/memory/: store.py
src/nodes/: assimilate.py  collect.py  evaluate.py  explore.py  extract.py  human.py  synthesize.py
src/tools/: builtins.py  registry.py
tests/: test_builtins_and_history.py  test_code_executor.py  test_domain_classifier.py  test_domain_executors.py  test_evolution_loop.py  test_executor.py  test_github_exporter.py  test_graph.py  test_memory.py  test_session_source.py  test_state.py  test_tool_synthesis.py  test_webtools.py
