[project]
name = "self-evolving-agent"
version = "0.1.0"
description = "Self-Evolving LLM Agent on LangGraph — autonomous skill extraction, policy exploration, and lifelong learning"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
