[project]
name = "self-evolving-agent"
version = "0.1.0"
description = "Self-Evolving LLM Agent on LangGraph — autonomous skill extraction, policy exploration, and lifelong learning"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Artem K" }]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]
dashboard = ["fastapi>=0.115", "uvicorn>=0.30"]
research = [
    "production-rag-pipeline @ git+https://github.com/KazKozDev/production_rag_pipeline.git@ae4ed60c9165b49c58705d85e470b6c833f1fab9",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
